--- a/.github/workflows/enforce-approval-voting.yml
+++ b/.github/workflows/enforce-approval-voting.yml
@@ -20,4 +20,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          node enforceApproval.js
+          node .github/scripts/enforceApproval.js
