--- a/.github/workflows/enforce-approval-voting.yml
+++ b/.github/workflows/enforce-approval-voting.yml
@@ -1,4 +1,4 @@
-name: Enforce Voting Approval Requirements
+name: Enforce Custom Approval Requirements
 
 on:
   pull_request:
@@ -7,17 +7,28 @@ on:
 jobs:
   approval-check:
     runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      # Step 2: Set up Node.js environment
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '16'  # Ensure this matches your script's Node.js version requirement
 
+      # Step 3: Install Dependencies within .github/
+      - name: Install Dependencies
+        working-directory: .github
+        run: |
+          npm install
+
+      # Step 4: Execute the Enforcement Script
       - name: Enforce Approval Requirement
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          node .github/enforceApproval.js
+          node enforceApproval.js
+        working-directory: .github
